Removed DEV03 and updated COM01

--- a/TODO.txt
+++ b/TODO.txt
@@ -13,12 +13,9 @@ CM01: This is an easy manual check so tools are not required.
 
 DEV01: This needs to be added to the tool to grep for <artifactId>alfresco-sdk-parent</artifactId> on pom.xml (Done)
 DEV02: This needs to be removed or marked as "not strict" from the tool since it's removed in the document template.
-DEV03: This appears similar to API04. Not sure if it is worthwhile adding to the tool a grep for “<module>” on *.xml, 
-which will give you results on any Share extensibility modules used, maybe this belongs to a new criteria?
 
-COM01: I wonder whether we need to ensure method names don't collide with those in Alfresco. 
-If so, we should grep for 'org.alfresco.*'.
-
+COM01: 1. Refine the query to return only packages found in *.java files that has the format of "package ...;" and not "import ...;". (Done)
+       2. Include "package org.alfresco...;" to be returned to capture any class that adopts org.alfresco as the package so code collision manual check can be carried out. (Done)
 COM02: I wonder whether we need to ensure method names don't collide with those in Alfresco. 
 COM04: This needs to be removed or marked as "not strict" from the tool since it's removed in the document template.
 COM06: The code is checking for 1.6 or greater. This should be changed to check for 1.8 or greater.
