--- a/TODO.txt
+++ b/TODO.txt
@@ -32,8 +32,7 @@ PERF03: OK
 SEC01: OK
 SEC02: OK
 SEC03: OK
-SEC04: OK, should we also grep on "Runtime.exec(" in *.java and "RuntimeExec" in *.xml, because these are the 
-Alfresco way to run processes. 
+SEC04: OK, should we also grep on 'org.alfresco.util.exec.RuntimeExec' in *.java packages because these are the Alfresco way to run Alfresco processes. (Done)
 SEC05: OK
 
 STB01: Cannot be checked by tool easily, so OK to leave out.
